beszel-agent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beszel-agent
  namespace: beszel-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beszel-agent
  template:
    metadata:
      labels:
        app: beszel-agent
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: beszel-agent
          image: henrygd/beszel-agent@sha256:f27b1aa2c68404bc5b9e1a2ab36653bd9b4ee14f6299862f09cd5051a4134767
          volumeMounts:
            - name: data
              mountPath: /var/lib/beszel-agent
            - name: docker-sock
              mountPath: /var/run/docker.sock
              readOnly: true
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
            requests:
              memory: "32Mi"
              cpu: "25m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: beszel-agent-data
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
